--- a/api.css
+++ b/api.css
@@ -12,6 +12,16 @@
   color: #00a;
 }
 
+.php .php-function a.local {
+  color: #00a;
+  font-weight: bold;
+}
+
+.php .php-function a.php-manual {
+  color: #048;
+  font-weight: bold;
+}
+
 .php .php-variable {
   color: #330;
 }
@@ -25,5 +35,5 @@
 }
 
 .php .php-keyword {
-  color: #066;
+  color: #060;
 }
