--- a/api.css
+++ b/api.css
@@ -8,16 +8,16 @@
   color: #666;
 }
 
-.php .php-function {
+.php .php-function-or-constant {
   color: #00a;
 }
 
-.php .php-function a.local {
+.php .php-function-or-constant a.local {
   color: #00a;
   font-weight: bold;
 }
 
-.php .php-function a.php-manual {
+.php .php-function-or-constant a.php-manual {
   color: #048;
   font-weight: bold;
 }
