--- a/api.css
+++ b/api.css
@@ -37,3 +37,10 @@
 .php .php-keyword {
   color: #060;
 }
+
+
+/* Search block- make the text field the correct width */
+
+#api-search-form #edit-search {
+  width: 95%;
+}
