A lot of UI refactoring. Making templates, moving around @link (needs tests) and redesigned function signatures.

--- a/api.css
+++ b/api.css
@@ -39,6 +39,45 @@
   color: #060;
 }
 
+/* Function signature */
+
+#api-function-signature {
+  color: #808080;
+  font-size: 1.2em;
+}
+
+#api-function-signature dt {
+  font-weight: normal;
+  float: left;
+  text-align: right;
+}
+
+#api-function-signature strong {
+  color: #000;
+  font-weight: normal;
+}
+
+#api-function-signature dt strong {
+  font-weight: bold;
+}
+
+#api-function-signature del {
+  text-decoration: none;
+  color: #dd8080;
+}
+
+#api-function-signature strong del {
+  color: #f00;
+}
+
+#api-function-signature ins {
+  text-decoration: none;
+  color: #80cc80;
+}
+
+#api-function-signature strong ins {
+  color: #080;
+}
 
 /* Search block- make the text field the correct width */
 
