--- a/api.css
+++ b/api.css
@@ -81,6 +81,10 @@
 
 /* Search block- make the text field the correct width */
 
+#api-search-form #edit-search-wrapper {
+  display: inline;
+}
+
 #api-search-form #edit-search {
-  width: 95%;
+  width: 115px;
 }
