Adding stray css.

--- a/api.css
+++ b/api.css
@@ -5,6 +5,11 @@ html.js div.api-expandable div.content {
   display: none;
 }
 
+/* Expandable regions */
+html.js div.api-expandable div.content {
+  display: none;
+}
+
 /* PHP code */
 .php {
   font-family: monospace;
