--- a/api.css
+++ b/api.css
@@ -56,6 +56,10 @@ dl.api-related-topics dd {
   float: left;
   text-align: right;
 }
+#api-function-signature dt.header {
+  float: none;
+  font-size: 0.6944em;
+}
 #api-function-signature dt a,
 #api-function-signature dd a,
 #api-function-signature dt a:visited,
