--- a/api.css
+++ b/api.css
@@ -55,10 +55,15 @@ dl.api-related-topics dd {
 #api-function-signature dt {
   float: left;
   text-align: right;
+  width: 5em;
+}
+#api-function-signature dd {
+  margin-left: 5.5em;
 }
 #api-function-signature dt.header {
   float: none;
   font-size: 0.6944em;
+  width: 7.2em;
 }
 #api-function-signature dt a,
 #api-function-signature dd a,
