More contrasty green

--- a/api.css
+++ b/api.css
@@ -79,7 +79,7 @@ html.js div.api-expandable div.content {
 }
 #api-function-signature ins {
   text-decoration: none;
-  color: #96bc44;
+  color: #456500;
 }
 
 /* Search block- make the text field the correct width */
