--- a/api.css
+++ b/api.css
@@ -34,6 +34,11 @@ html.js div.api-expandable div.content {
   color: #060;
 }
 
+td.line-numbers {
+    color: #666666;
+    text-align: right;
+}
+
 /* Function signature */
 #api-function-signature td,
 #api-function-signature td a,
