Issue #1411776 by psynaptic: Move lists of calling functions and hook implementations to separate pages

--- a/api.css
+++ b/api.css
@@ -1,7 +1,7 @@
-/* Expandable regions */
-html.js div.api-expandable div.content {
-  display: none;
-}
+/**
+ * @file
+ * CSS for the API module.
+ */
 
 /* PHP code */
 .php {
