--- a/jquery-autocomplete/jquery.autocomplete.css
+++ b/jquery-autocomplete/jquery.autocomplete.css
@@ -2,6 +2,7 @@
 	padding: 0px;
 	border: 1px solid black;
 	background-color: white;
+        background-image: none;
 	overflow: hidden;
 	z-index: 99999;
 }
@@ -10,6 +11,7 @@
 	width: 100%;
 	list-style-position: outside;
 	list-style: none;
+        background-image: none;
 	padding: 0;
 	margin: 0;
 }
@@ -19,6 +21,7 @@
 	padding: 2px 5px;
 	cursor: default;
 	display: block;
+        background-image: none;
 	/* 
 	if width will be 100% horizontal scrollbar will apear 
 	when scroll mode will be used
